add login image

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
 
     <!-- Image Container -->
-    <img src="http://kartinki-risunki.ru/sites/kartinki-risunki.ru/files/images/79/12870.jpg" 
+    <img src="./images/image.jpg" 
           class="rounded-r-xl w-[460px] md:block hidden"
           alt="">
     <!-- <div class="w-[460px] md:block hidden">
