resize the login height on medium

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
  <!-- Glabal container -->
- <div class="flex min-h-screen items-center justify-center bg-cyan-50">
+ <div class="flex min-h-screen md:h-screen items-center justify-center bg-cyan-50">
   <!-- Flex Container -->
   <div class="relative flex m-6 rounded-xl bg-white shadow-2xl">
     <!-- Login Container -->
